--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Project: Inventory Application from The Odin Project's NodeJS Course",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "seed": "node db/populatedb.js"
   },
   "repository": {
     "type": "git",
